deploy/overlays/windows-kerberos-demo/patches/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mate-backend
spec:
  host: api.matebank.demo
