deploy/overlays/windows-kerberos-demo/patches/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mate-keycloak
spec:
  host: sso.matebank.demo
