deploy/overlays/windows-kerberos-demo/patches/portal-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mate-portal
spec:
  host: portal.matebank.demo
